src/style.css
@font-face {
    font-family: 'oswald';
    src: url('./fraunces-v23-latin-regular.woff2') format('woff2');
    font-style: normal;
    font-weight: 200;
}

 *{
    font-family: 'oswald';
 }
 
body {
    margin: 0;
    padding: 0;
    background-image: url(./building.jpg);
    background-repeat: no-repeat;
    background-size:cover;
    background-position: 42%;
    
}

button{
    background-color: inherit;
    border: 1px solid;
    padding: 10px;
    padding-inline: 50px;
    transition: .4s;
    cursor: pointer;
    background-color: whitesmoke;
    border-radius: 3px;
}

button:hover{
    transition: .4s;
    background-color: black;
    border-color: black;
    color: whitesmoke;
    box-shadow: 3px 3px 5px;

}

.content{
    display:grid;
    grid-template-rows: 1fr 20fr .5fr;
    grid-template-columns: 1fr;
    height: 100vh;
    width: 100vw;
    
}
.nav{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    font-size: 25px;
    padding-left: 25px;

    background-color: rgba(255, 255, 255, .35);
    backdrop-filter: blur(5px);
}

.container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

}

.pages {
    display: flex;
    min-width: 80%;
    justify-content: space-evenly;
    margin: 5px;
}    

.subject {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    
    width: 82%;
    height: 90%;
    
    
    margin-bottom: 15px;
}
.item{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    gap: 40px;
    width: inherit;
    height: inherit;
    padding: 10px;
    padding-bottom: 15px;
    background-color: rgba(255, 255, 255, .15);
    backdrop-filter: blur(5px);
    

    backdrop-filter: blur(5px);
    border: 1px solid;
    border-color: black;
    border-radius: 6px;
}
.card {
    display: flex;
    justify-content: space-between;
    align-items: center;

    gap: 15px;
    padding: 20px;
    width: inherit;
    min-width: 60vw;

    border: 1px solid;
    border-color: black;
    border-radius: 3px;
    background-color: whitesmoke;
    
}
.card:hover{
    transition: .4s;
    background-color: black;
    border-color: black;
    color: whitesmoke;
    box-shadow: 2px 2px 10px;
}

.course{
    display: flex;
    flex-direction: column;
    gap: 5px;
    min-width: 90%;
    
}
.card div:first-child {
    font-weight: bold;
}
.card div:nth-child(2){
    font-style: italic;
    font-size: 14px;
}

footer{
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(255, 255, 255, .25);
    backdrop-filter: blur(5px);

}
.subtitle {
    font-weight: bold;
}
.desc{
    width: 50%;
}

